# sdl2-hs-windows

./: LICENSE  README.md  path-setup.bat  sdl-files-fetcher.ps1  sdl2-hs-windows.cabal  stack.yaml
src/: Main.hs
